<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <EditText
                android:id="@+id/label_name"
                android:layout_width="223dp"
                android:layout_height="51dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/input_detail_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                app:layout_constraintEnd_toStartOf="@+id/checkBox_favorites"
                app:layout_constraintHorizontal_bias="0.139"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Spinner
                android:id="@+id/spinner_race"
                android:layout_width="153dp"
                android:layout_height="37dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/input_detail_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView_Raza"
                app:layout_constraintTop_toBottomOf="@+id/label_name" />

        <ImageView
                android:id="@+id/image_foto"
                android:layout_width="82dp"
                android:layout_height="77dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/label_detail_image"
                android:gravity="center_horizontal"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/button_image"
                app:layout_constraintHorizontal_bias="0.536"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_race"
                app:srcCompat="@drawable/default_dog" />

        <EditText
                android:id="@+id/label_email"
                android:layout_width="168dp"
                android:layout_height="64dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/input_detail_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintEnd_toStartOf="@+id/label_phone"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_foto"
                android:autofillHints=""/>

        <EditText
                android:id="@+id/label_phone"
                android:layout_width="133dp"
                android:layout_height="66dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:hint="@string/input_detail_phone"
                android:inputType="phone"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_image" />

        <EditText
                android:id="@+id/label_address"
                android:layout_width="347dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/input_detail_address"
                android:inputType="text|textPersonName"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_email"
                android:autofillHints=""/>

        <Button
                android:id="@+id/button_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginTop="36dp"
                android:text="@string/button_detail_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_race" />

        <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="finishActivity"
                android:text="@string/button_detail_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_address" />

        <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="56dp"
                android:layout_marginTop="12dp"
                android:text="@string/button_detail_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_address" />

        <TextView
                android:id="@+id/textView_Raza"
                android:layout_width="60dp"
                android:layout_height="19dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="32dp"
                android:text="@string/label_detail_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_name" />

        <CheckBox
                android:id="@+id/checkBox_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/label_detail_checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>